<resources>
    <string name="app_name">KeyBox Installer</string>
    <string name="action_settings">Settings</string>
    <string name="pgm_keybox">Program KeyBox</string>
    <string name="device_id">Device ID:</string>
    <string name="device_id_hint">Enter the device id here (max 32 characters)</string>
    <string name="device_key">Device Key:</string>
    <string name="device_key_hint">Enter the device key here (must be 16 characters)</string>
    <string name="key_data">Key Data:</string>
    <string name="key_data_hint">Enter the key data here (must be 144 characters)</string>
    <string name="CRC"> CRC:</string>
    <string name="CRC_hint"> Enter Cyclic Redundancy Check here (must be 8 characters) </string>
    <string name="pgm_keybox_btn_txt">Program</string>
    <string name="pgm_keybox_btn_txt_hint">Tap/Press Enter to Program KeyBox into TAB</string>
    <string name="hex_digits">0123456789ABCDEFabcdef</string>
    <string name="response_hint">Output of programing keybox will appear here</string>
    <string name="use_keybox_file_switch">Use File</string>
    <string name="filename_entry">Filename:</string>
    <string name="filename_entry_hint">Example: /mnt/sdcard/Download/keybox.xml </string>
    <string name="device_id_txt_view_prefix">Device ID Detected:</string>
</resources>